--- a/assets/style.css
+++ b/assets/style.css
@@ -14,13 +14,20 @@ footer{
 footer p{
     text-align: center;
     font-size: 0.6rem;
-
+}
+#container{
+    display: flex; 
+}
+.cartao{
+    margin:1rem 1rem;
+    background-color: aqua;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33%-6rem);
 }
 
-
-
-
-.container{
-    background-color: red;
-
+.cartao_conteudo {
+    text-align: center;
+    background-color: aquamarine;
+    height:100%;
 }
